# xpublish-edr

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  COMPLIANCE.md  MANIFEST.in  README.md  coverage.xml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pre-commit.yml  publish-to-pypi.yml  tests.yml
docs/: Makefile
docs/source/: conf.py  how2package4ioos.md  index.rst  ioos_pkg_skeleton.rst
notebooks/: tutorial.ipynb
tests/: conftest.py  test_cf_router.py  test_crs.py  test_handlers.py  test_ogc_core_integration.py  test_ogc_core_schemathesis.py  test_ogc_teamengine.py  test_parse_body.py  test_select.py  test_teamengine.py  test_to_geotiff.py  test_utils.py  test_xpublish_edr.py
xpublish_edr/: __init__.py  base_query.py  cf_edr_router.py  format.py  logger.py  logging.py  metadata.py  plugin.py  query.py  select.py  utils.py  xpublish_edr.py
xpublish_edr/area/: __init__.py  handle.py  params.py  parse.py  query.py
xpublish_edr/cube/: __init__.py  handle.py  params.py  query.py
xpublish_edr/formats/: to_covjson.py  to_csv.py  to_geojson.py  to_geotiff.py  to_netcdf.py  to_parquet.py
xpublish_edr/geometry/: __init__.py  area.py  bbox.py  common.py  parse.py  position.py  trajectory.py
xpublish_edr/position/: __init__.py  geom.py  handle.py  params.py  parse.py  query.py
