[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "xpublish_edr"
description = ""
readme = "README.md"
requires-python = ">=3.12"
keywords = []
license = { file = "LICENSE.txt" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version", "dependencies"]

[project.entry-points."xpublish.plugin"]
cf_edr = "xpublish_edr.plugin:CfEdrPlugin"

[project.entry-points.xpublish_edr_position_formats]
cf_covjson = "xpublish_edr.formats.to_covjson:to_cf_covjson"
csv = "xpublish_edr.formats.to_csv:to_csv"
geojson = "xpublish_edr.formats.to_geojson:to_geojson"
nc = "xpublish_edr.formats.to_netcdf:to_netcdf"
netcdf = "xpublish_edr.formats.to_netcdf:to_netcdf"
nc4 = "xpublish_edr.formats.to_netcdf:to_netcdf"
netcdf4 = "xpublish_edr.formats.to_netcdf:to_netcdf"
parquet = "xpublish_edr.formats.to_parquet:to_parquet"

[project.entry-points.xpublish_edr_area_formats]
cf_covjson = "xpublish_edr.formats.to_covjson:to_cf_covjson"
csv = "xpublish_edr.formats.to_csv:to_csv"
geojson = "xpublish_edr.formats.to_geojson:to_geojson"
nc = "xpublish_edr.formats.to_netcdf:to_netcdf"
netcdf = "xpublish_edr.formats.to_netcdf:to_netcdf"
nc4 = "xpublish_edr.formats.to_netcdf:to_netcdf"
netcdf4 = "xpublish_edr.formats.to_netcdf:to_netcdf"
parquet = "xpublish_edr.formats.to_parquet:to_parquet"

[project.entry-points.xpublish_edr_cube_formats]
cf_covjson = "xpublish_edr.formats.to_covjson:to_cf_covjson"
csv = "xpublish_edr.formats.to_csv:to_csv"
geojson = "xpublish_edr.formats.to_geojson:to_geojson"
nc = "xpublish_edr.formats.to_netcdf:to_netcdf"
netcdf = "xpublish_edr.formats.to_netcdf:to_netcdf"
nc4 = "xpublish_edr.formats.to_netcdf:to_netcdf"
netcdf4 = "xpublish_edr.formats.to_netcdf:to_netcdf"
parquet = "xpublish_edr.formats.to_parquet:to_parquet"
geotiff = "xpublish_edr.formats.to_geotiff:to_geotiff"


[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "requirements.txt" }]

[tool.check-manifest]
ignore = ["xpublish_edr/_version.py"]

[tool.setuptools]
packages = ["xpublish_edr"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
write_to = "xpublish_edr/_version.py"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[dependency-groups]
dev = [
    "cf_xarray",
    "dask",
    "httpx",
    "jsonschema",
    "netcdf4",
    "pooch",
    "pytest",
    "referencing",
    "schemathesis>=4.11.2",
    "uvicorn",
    "xpublish-ogc-core",
]

[tool.pytest.ini_options]
markers = [
    "cite: official OGC CITE compliance suites run with TeamEngine in Docker (slow)",
]

[tool.uv.sources]
xpublish-ogc-core = { path = "../xpublish-ogc-core", editable = true }
